<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rival_title_1"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginTop="@dimen/rival_title_margin_top"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/result_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toTopOf="@+id/title_1"
            app:layout_constraintStart_toEndOf="@+id/title_1"
            />

        <TextView
            android:id="@+id/title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rival_title_2"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginTop="@dimen/rival_title_margin_top"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toBottomOf="@+id/title_1"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/result_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toTopOf="@+id/title_2"
            app:layout_constraintStart_toEndOf="@+id/title_2"
            />

        <TextView
            android:id="@+id/title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rival_title_3"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginTop="@dimen/rival_title_margin_top"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toBottomOf="@+id/title_2"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/result_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toTopOf="@+id/title_3"
            app:layout_constraintStart_toEndOf="@+id/title_3"
            />

        <TextView
            android:id="@+id/title_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rival_title_4"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginTop="@dimen/rival_title_margin_top"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toBottomOf="@+id/title_3"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/result_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/rival_title_size"
            android:layout_marginStart="@dimen/rival_title_margin_start"
            app:layout_constraintTop_toTopOf="@+id/title_4"
            app:layout_constraintStart_toEndOf="@+id/title_4"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/title_4"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
